--- a/index.html
+++ b/index.html
@@ -4,8 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+<link rel="stylesheet" href="css\style.css">
+    <!-- CSS -->
 </head>
+
 <body>
-    
+    <!-- logo dan navigasi -->
+    <header class="main-header">
+        <!-- logo -->
+        <div class="logo-icon"></div>
+
+        <!-- Navigation -->
+         <nav>
+            <a href="#home-page" class="left-rounded">Home</a>
+            <a href="#our-profile">Our Profile</a>
+            <a href="#portfolio">Portofolio</a>
+            <a href="#message-us" class="right-rounded">Message</a>
+         </nav>
+    </header>
+
+    <hr />
+
+    <!-- Main Content -->
+    <main>
+        <!-- home page -->
+        <section>
+            <!-- tittle -->
+            <header id="home-page">
+                <h1>Hi <span id="user-greeting">User</span>, Welcome to our website</h1>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </header>
+
+            <div class="banner-image">
+
+            </div>
+
+        </section>
+
+        <!-- our profile -->
+        <section>
+            <!-- tittle -->
+            <header id="our-profile">
+                <h1>Our profile</h1>
+            </header>
+
+            <div class="content"></div>
+        </section>
+
+        <!-- Portfolio -->
+         <section>
+            <!-- tittle -->
+            <header id="portfolio">
+                <h1>Portfolio</h1>
+            </header>
+
+            <div class="content"></div>
+         </section>
+
+         <!-- message us -->
+          <section>
+            <!-- tittle -->
+            <header id="message-us">
+                <h1>Message us</h1>
+            </header>
+
+            <div class="content"></div>
+          </section>
+    </main>
+
+    <hr />
+
+    <!-- footer -->
+    <footer>
+        <p>&copy; 2025 - All rights reserved</p>
+    </footer>
 </body>
+
 </html>
